--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   firebase_auth: ^5.1.3 # Firebase Authentication for managing user sign-in
   google_sign_in: ^5.0.7
   image_picker: ^0.8.7+4
+  firebase_storage: ^12.3.7
+  cloud_firestore: ^5.0.0
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
